// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> changes language: en 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`<Header /> changes language: en 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`<Header /> changes language: ja 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,16 +5,16 @@
      <div
        class=\\"languages\\"
        data-testid=\\"language-list\\"
      >
        <a
-         class=\\"active\\"
+         class=\\"\\"
        >
          English
        </a>
        <a
-         class=\\"\\"
+         class=\\"active\\"
        >
          日本語
        </a>
        <a
          class=\\"\\""
`;

exports[`<Header /> changes language: ja 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,16 +5,16 @@
      <div
        class=\\"languages\\"
        data-testid=\\"language-list\\"
      >
        <a
-         class=\\"active\\"
+         class=\\"\\"
        >
          English
        </a>
        <a
-         class=\\"\\"
+         class=\\"active\\"
        >
          日本語
        </a>
        <a
          class=\\"\\""
`;

exports[`<Header /> changes language: zh-CN 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,21 +5,21 @@
      <div
        class=\\"languages\\"
        data-testid=\\"language-list\\"
      >
        <a
-         class=\\"active\\"
+         class=\\"\\"
        >
          English
        </a>
        <a
          class=\\"\\"
        >
          日本語
        </a>
        <a
-         class=\\"\\"
+         class=\\"active\\"
        >
          简体中文
        </a>
        <a
          class=\\"\\""
`;

exports[`<Header /> changes language: zh-CN 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,21 +5,21 @@
      <div
        class=\\"languages\\"
        data-testid=\\"language-list\\"
      >
        <a
-         class=\\"active\\"
+         class=\\"\\"
        >
          English
        </a>
        <a
          class=\\"\\"
        >
          日本語
        </a>
        <a
-         class=\\"\\"
+         class=\\"active\\"
        >
          简体中文
        </a>
        <a
          class=\\"\\""
`;

exports[`<Header /> changes language: zh-TW 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
      <div
        class=\\"languages\\"
        data-testid=\\"language-list\\"
      >
        <a
-         class=\\"active\\"
+         class=\\"\\"
        >
          English
        </a>
        <a
          class=\\"\\"
@@ -20,11 +20,11 @@
          class=\\"\\"
        >
          简体中文
        </a>
        <a
-         class=\\"\\"
+         class=\\"active\\"
        >
          正體中文
        </a>
      </div>
    </div>"
`;

exports[`<Header /> changes language: zh-TW 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
      <div
        class=\\"languages\\"
        data-testid=\\"language-list\\"
      >
        <a
-         class=\\"active\\"
+         class=\\"\\"
        >
          English
        </a>
        <a
          class=\\"\\"
@@ -20,11 +20,11 @@
          class=\\"\\"
        >
          简体中文
        </a>
        <a
-         class=\\"\\"
+         class=\\"active\\"
        >
          正體中文
        </a>
      </div>
    </div>"
`;

exports[`<Header /> renders 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="languages"
      data-testid="language-list"
    >
      <a
        class="active"
      >
        English
      </a>
      <a
        class=""
      >
        日本語
      </a>
      <a
        class=""
      >
        简体中文
      </a>
      <a
        class=""
      >
        正體中文
      </a>
    </div>
  </div>
</DocumentFragment>
`;
